--- a/airflow/Dockerfile
+++ b/airflow/Dockerfile
@@ -1,7 +1,10 @@
 FROM apache/airflow:2.9.3
 
-# Install Azure SDK dependencies as airflow user
+# Install required dependencies
 USER airflow
-RUN pip install azure-identity azure-keyvault-secrets
+RUN pip install apache-airflow-providers-microsoft-winrm<3.0.0 pandas openpyxl requests xlrd
+
+# Add src directory to Python path
+ENV PYTHONPATH="${PYTHONPATH}:/opt/airflow/src"
 
 
