OCR rotation fixes

--- a/airflow/Dockerfile
+++ b/airflow/Dockerfile
@@ -1,14 +1,36 @@
 FROM apache/airflow:2.9.3
 
-# Install system dependencies for OCR
+# Install system dependencies for OCR and image processing
 USER root
 RUN apt-get update && \
-    apt-get install -y tesseract-ocr tesseract-ocr-por && \
-    rm -rf /var/lib/apt/lists/*
+    apt-get install -y \
+    tesseract-ocr \
+    tesseract-ocr-por \
+    libgl1-mesa-glx \
+    libglib2.0-0 \
+    && rm -rf /var/lib/apt/lists/*
 
 # Install required Python dependencies
 USER airflow
-RUN pip install "apache-airflow-providers-microsoft-winrm<3.0.0" pandas openpyxl requests xlrd fastapi uvicorn httpx boto3 pypdf pymupdf pytesseract pillow
+RUN pip install --no-cache-dir \
+    "apache-airflow-providers-microsoft-winrm<3.0.0" \
+    pandas \
+    openpyxl \
+    xlrd \
+    fastapi \
+    uvicorn \
+    httpx \
+    boto3 \
+    pypdf \
+    pymupdf \
+    pytesseract \
+    pillow \
+    fpdf2 \
+    pdf2image \
+    numpy \
+    opencv-python \
+    paddleocr \
+    easyocr
 
 # Add src directory to Python path
 ENV PYTHONPATH="${PYTHONPATH}:/opt/airflow/src"
